# physics_lab_works

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
1_sem/1.2.3/: WARNING.md
1_sem/1.2.3/Krivoruchko_D_I/: README.md
1_sem/2-3/: WARNING.md
1_sem/2-3/Krivoruchko_D_I/: README.md
1_sem/201/: WARNING.md
1_sem/201/Krivoruchko_D_I/: README.md
2_sem/1.1.4/Krivoruchko_D_I/: 1.1.4 Измерение интенсивности радиационного фона.xlsx
2_sem/1.3.3/: 1.3.3 Определение вязкости воздуха по скорости течения через тонкие трубки.xlsx
2_sem/122/: WARNING.md
2_sem/122/Krivoruchko_D_I/: README.md
2_sem/123/: WARNING.md
2_sem/123/igreeda/: mnk123for_igreeda.ipynb
3_sem/204/: 204.ipynb
3_sem/205/: 205.ipynb
3_sem/205/Nikolaev_I_I/: Find_B.py  Phys_func.py  al.py  experemental_data.py  main.py
3_sem/211/Krivoruchko_D_I/: 211.ipynb
3_sem/212/: 212.ipynb
3_sem/213/: 213.ipynb
3_sem/methodological_manuals/: New205.doc  New206.doc
3_sem/new_methodological_manuals_M.N.Osin/: New211-212.doc  New213.doc
3_sem/new_methodological_manuals_M.V.Osin/: New204.doc
4_sem/222/: 222.ipynb  README.md
4_sem/222/Krivoruchko_D_I/: 222.ipynb  lorentzian.py
4_sem/223/: 223.ipynb
4_sem/223/Krivoruchko_D_I/: 223.ipynb
4_sem/232/Krivoruchko_D_I/: 232.ipynb
4_sem/233/Krivoruchko_D_I/: 233.ipynb
4_sem/4.3.1/: 4.3.1.ipynb
4_sem/4.3.1/Fazlyev_N/: laba.ipynb
4_sem/4.3.1/Krivoruchko_D_I/: 4.3.1.ipynb
4_sem/methodological_manuals/: 233.doc  Lr222final.doc  Lr223final.doc  Lr232.doc
5_sem/331/Krivoruchko_D_I/: 331.ipynb
(+10 files in other folders)
