[project]
name = "physics-lab-works"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
]
